[gd_scene load_steps=24 format=3 uid="uid://cbdwllirm25gs"]

[ext_resource type="Script" path="res://Menu/Command_Screen/Command_Screen.gd" id="1_fad7s"]
[ext_resource type="Texture2D" uid="uid://ccln61k6rq53p" path="res://Sprites/Menu/Mouse_Cursor.PNG" id="2_ausf2"]
[ext_resource type="Texture2D" uid="uid://c0jiwpi220rdf" path="res://Sprites/Menu/Mouse.PNG" id="3_d8dw0"]
[ext_resource type="Texture2D" uid="uid://txbsfbpjire6" path="res://Sprites/Menu/Z.png" id="4_u5fjk"]
[ext_resource type="Texture2D" uid="uid://ct5x4ywvttjae" path="res://Sprites/Menu/Q.png" id="5_ykhpv"]
[ext_resource type="Texture2D" uid="uid://b4t8ksfoutbe8" path="res://Sprites/Menu/S.png" id="6_rabbv"]
[ext_resource type="Texture2D" uid="uid://gr0e6og4jbfw" path="res://Sprites/Menu/D.png" id="7_ionum"]
[ext_resource type="Texture2D" uid="uid://dw87q7bomrpsf" path="res://Sprites/Menu/Arrow.png" id="8_r6677"]
[ext_resource type="Texture2D" uid="uid://d26jmoxif2ikt" path="res://Sprites/Menu/Mouse_Cursor_Green.png" id="9_0n648"]
[ext_resource type="Texture2D" uid="uid://ci5lprt1ch1h5" path="res://Sprites/Menu/Space_Bar.png" id="9_7vhly"]
[ext_resource type="Texture2D" uid="uid://cbkkhlig0jg86" path="res://Sprites/Menu/Mouse_Green.png" id="10_5c4m8"]
[ext_resource type="Texture2D" uid="uid://cwva18a54hl7b" path="res://Sprites/Menu/Z_Green.png" id="11_1j5to"]
[ext_resource type="Texture2D" uid="uid://ba8fogpsacw58" path="res://Sprites/Menu/Q_Green.png" id="12_y7jeh"]
[ext_resource type="Texture2D" uid="uid://250ub8x2sihe" path="res://Sprites/Menu/S-removebg-preview.png" id="13_jpcsv"]
[ext_resource type="Texture2D" uid="uid://cqkekej2bo6h0" path="res://Sprites/Menu/D_Green.png" id="14_huq3p"]
[ext_resource type="Texture2D" uid="uid://ytoydt25ybpq" path="res://Sprites/Menu/Arrow_Green.png" id="15_mppvh"]
[ext_resource type="Texture2D" uid="uid://bqalqs3mxadf7" path="res://Sprites/Menu/Button.png" id="16_xb27o"]
[ext_resource type="Texture2D" uid="uid://burhnvkublcje" path="res://Sprites/Menu/Button_Green.png" id="17_m2qvd"]
[ext_resource type="Texture2D" uid="uid://cwteeyd23terw" path="res://Sprites/Menu/Space_Bar_Green.png" id="17_sbd8n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uietf"]
size = Vector2(172, 72)

[sub_resource type="Animation" id="Animation_hnyy6"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_73va8"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qte7q"]
_data = {
"fade_in": SubResource("Animation_hnyy6"),
"fade_out": SubResource("Animation_73va8")
}

[node name="Command_Screen" type="Node2D"]
script = ExtResource("1_fad7s")

[node name="Black_Background_ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Command_Label" type="RichTextLabel" parent="Black_Background_ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.496
anchor_right = 0.496
offset_left = -407.88
offset_top = 24.0
offset_right = 477.12
offset_bottom = 152.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Les commandes pour interagir avec le jeu"

[node name="Mouse_Command" type="Node2D" parent="Black_Background_ColorRect"]

[node name="Cursor_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Mouse_Command"]
position = Vector2(1021, 271.25)
scale = Vector2(0.679272, 0.693705)
texture = ExtResource("2_ausf2")

[node name="Mouse_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Mouse_Command"]
position = Vector2(845, 415.25)
scale = Vector2(0.629032, 0.599071)
texture = ExtResource("3_d8dw0")

[node name="Keyboard_Command" type="Node2D" parent="Black_Background_ColorRect"]

[node name="Keyboard_Letters" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command"]

[node name="Z_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Letters"]
position = Vector2(318, 267.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_u5fjk")

[node name="Q_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Letters"]
position = Vector2(230, 356.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_ykhpv")

[node name="S_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Letters"]
position = Vector2(318, 355.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_rabbv")

[node name="D_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Letters"]
position = Vector2(410, 358.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_ionum")

[node name="Keyboard_Arrows" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command"]

[node name="Arrow_Up_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Arrows"]
position = Vector2(317.4, 178.4)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_r6677")

[node name="Arrow_Left_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Arrows"]
position = Vector2(138.4, 358.4)
rotation = -1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_r6677")

[node name="Arrow_Down_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Arrows"]
position = Vector2(319.4, 444.4)
rotation = 3.14159
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_r6677")

[node name="Arrow_Right_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Arrows"]
position = Vector2(498.4, 358.4)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_r6677")

[node name="Keyboard_Other" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command"]

[node name="Space_Bar_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command/Keyboard_Other"]
position = Vector2(320, 562)
scale = Vector2(0.32497, 0.4)
texture = ExtResource("9_7vhly")

[node name="Mouse_Command_Green" type="Node2D" parent="Black_Background_ColorRect"]

[node name="Cursor_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Mouse_Command_Green"]
visible = false
position = Vector2(1020, 283)
scale = Vector2(0.679272, 0.693705)
texture = ExtResource("9_0n648")

[node name="Mouse_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Mouse_Command_Green"]
visible = false
position = Vector2(848, 416)
scale = Vector2(0.629032, 0.599071)
texture = ExtResource("10_5c4m8")

[node name="Keyboard_Command_Green" type="Node2D" parent="Black_Background_ColorRect"]

[node name="Keyboard_Letters_Green" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command_Green"]

[node name="Z_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Letters_Green"]
visible = false
position = Vector2(318.8, 266.625)
scale = Vector2(0.484286, 0.482433)
texture = ExtResource("11_1j5to")

[node name="Q_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Letters_Green"]
visible = false
position = Vector2(227.8, 353.625)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_y7jeh")

[node name="S_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Letters_Green"]
visible = false
position = Vector2(317.8, 355.84)
scale = Vector2(0.467956, 0.469056)
texture = ExtResource("13_jpcsv")

[node name="D_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Letters_Green"]
visible = false
position = Vector2(409.8, 358.625)
scale = Vector2(0.474286, 0.477528)
texture = ExtResource("14_huq3p")

[node name="Keyboard_Arrows_Green" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command_Green"]

[node name="Arrow_Up_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Arrows_Green"]
visible = false
position = Vector2(318.449, 178.15)
scale = Vector2(0.533334, 0.553988)
texture = ExtResource("15_mppvh")

[node name="Arrow_Left_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Arrows_Green"]
visible = false
position = Vector2(137.448, 358.25)
rotation = -1.5708
scale = Vector2(0.554495, 0.557642)
texture = ExtResource("15_mppvh")

[node name="Arrow_Down_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Arrows_Green"]
visible = false
position = Vector2(318.699, 445.959)
rotation = 3.14159
scale = Vector2(0.537037, 0.553875)
texture = ExtResource("15_mppvh")

[node name="Arrow_Right_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Arrows_Green"]
visible = false
position = Vector2(499.109, 359.603)
rotation = 1.5708
scale = Vector2(0.547148, 0.551119)
texture = ExtResource("15_mppvh")

[node name="Keyboard_Other_Green" type="Node2D" parent="Black_Background_ColorRect/Keyboard_Command_Green"]

[node name="Space_Bar_Green_Sprite2D" type="Sprite2D" parent="Black_Background_ColorRect/Keyboard_Command_Green/Keyboard_Other_Green"]
visible = false
position = Vector2(318, 562.2)
scale = Vector2(0.40367, 0.415517)
texture = ExtResource("17_sbd8n")

[node name="Button" type="Node2D" parent="Black_Background_ColorRect"]

[node name="Button_Sprite_2D" type="Sprite2D" parent="Black_Background_ColorRect/Button"]
position = Vector2(640, 642)
scale = Vector2(0.3, 0.3)
texture = ExtResource("16_xb27o")

[node name="Button_Green_Sprite_2D" type="Sprite2D" parent="Black_Background_ColorRect/Button"]
position = Vector2(640, 639)
scale = Vector2(0.268613, 0.3)
texture = ExtResource("17_m2qvd")

[node name="Area2D" type="Area2D" parent="Black_Background_ColorRect/Button"]
position = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Black_Background_ColorRect/Button/Area2D"]
position = Vector2(640, 652)
shape = SubResource("RectangleShape2D_uietf")
debug_color = Color(0.831373, 0.831373, 0.827451, 0.419608)

[node name="ColorRect_Animation" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -2.0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer_Fade" type="AnimationPlayer" parent="ColorRect_Animation"]
libraries = {
"": SubResource("AnimationLibrary_qte7q")
}

[connection signal="mouse_entered" from="Black_Background_ColorRect/Button/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Black_Background_ColorRect/Button/Area2D" to="." method="_on_area_2d_mouse_exited"]
